341907: activate tests on hudson build